src/main/java/me/dsnet/cetriolo/antlr/output/GherkinParser.java
// $ANTLR 3.4 C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g 2013-01-23 18:04:10
package me.dsnet.cetriolo.antlr.output;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class GherkinParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BACKGROUND", "COMMENT", "DOCSTR", "EXAMPLE", "FEATURE", "FEAT_KEY", "NL", "NUMBER", "PHOLDER", "SCENARIO", "SCEN_OUT", "STEP_KEY", "STRING", "TAGNAME", "T_ROW", "WORD", "WS"
    };

    public static final int EOF=-1;
    public static final int BACKGROUND=4;
    public static final int COMMENT=5;
    public static final int DOCSTR=6;
    public static final int EXAMPLE=7;
    public static final int FEATURE=8;
    public static final int FEAT_KEY=9;
    public static final int NL=10;
    public static final int NUMBER=11;
    public static final int PHOLDER=12;
    public static final int SCENARIO=13;
    public static final int SCEN_OUT=14;
    public static final int STEP_KEY=15;
    public static final int STRING=16;
    public static final int TAGNAME=17;
    public static final int T_ROW=18;
    public static final int WORD=19;
    public static final int WS=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GherkinParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GherkinParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return GherkinParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g"; }


    	public List<SyntaxError> syntaxErrors = new ArrayList<SyntaxError>();

        @Override
        public String getErrorMessage(RecognitionException ex, String[] tokenNames) {
            String message = super.getErrorMessage(ex, tokenNames);
            SyntaxError.ErrorType type= null;
            StackTraceElement firstelem = ex.getStackTrace()[0];
            String methodName= firstelem.getMethodName();
            ex.printStackTrace();
            
            
            if(ex instanceof NoViableAltException){
                NoViableAltException e = (NoViableAltException)ex;
                String grammarDesc = e.grammarDecisionDescription;
                if(grammarDesc.contains("scenario | scenario_outline")){
                    type=SyntaxError.ErrorType.NOT_VIABLE_SCENARIO;
                }else if(grammarDesc.contains(" step ")){
                    type=SyntaxError.ErrorType.NOT_VIABLE_FEATURE;
                }else if(grammarDesc.contains(" background ")){
                    type=SyntaxError.ErrorType.NOT_VIABLE_BACKGROUND;
                }     
            }else if(ex instanceof MismatchedTokenException){
                type=SyntaxError.ErrorType.MISMATCHED_FEATURE;
            }else if(methodName!=null){
                System.out.println("stack trace: " + methodName);
                if(methodName.equals("feature")){
                    type=SyntaxError.ErrorType.MISSING_SCENARIO;
                }else if (methodName.equals("scenario")){
                    type=SyntaxError.ErrorType.MISSING_STEP;
                }else if (methodName.equals("title")){
                    type=SyntaxError.ErrorType.MISSING_TITLE;
                }else if (methodName.equals("stepdesc")){
                    type=SyntaxError.ErrorType.MISSING_STEP_DESC;
                }
            }       
            syntaxErrors.add(new SyntaxError(ex,message,type));
            return message;
        }


    public static class feature_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "feature"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:1: feature : ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( background )? ( scenario | scenario_outline )+ ;
    public final GherkinParser.feature_return feature() throws RecognitionException {
        GherkinParser.feature_return retval = new GherkinParser.feature_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL1=null;
        Token FEATURE3=null;
        Token NL5=null;
        GherkinParser.tag_return tag2 =null;

        GherkinParser.title_return title4 =null;

        GherkinParser.narrative_return narrative6 =null;

        GherkinParser.background_return background7 =null;

        GherkinParser.scenario_return scenario8 =null;

        GherkinParser.scenario_outline_return scenario_outline9 =null;


        Object NL1_tree=null;
        Object FEATURE3_tree=null;
        Object NL5_tree=null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:9: ( ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( background )? ( scenario | scenario_outline )+ )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:11: ( NL )* ( tag )* FEATURE title ( NL )+ ( narrative )? ( background )? ( scenario | scenario_outline )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:11: ( NL )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:52:11: NL
            	    {
            	    NL1=(Token)match(input,NL,FOLLOW_NL_in_feature44); 
            	    NL1_tree = 
            	    (Object)adaptor.create(NL1)
            	    ;
            	    adaptor.addChild(root_0, NL1_tree);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:53:11: ( tag )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==TAGNAME) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:53:11: tag
            	    {
            	    pushFollow(FOLLOW_tag_in_feature57);
            	    tag2=tag();

            	    state._fsp--;

            	    adaptor.addChild(root_0, tag2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            FEATURE3=(Token)match(input,FEATURE,FOLLOW_FEATURE_in_feature63); 
            FEATURE3_tree = 
            (Object)adaptor.create(FEATURE3)
            ;
            adaptor.addChild(root_0, FEATURE3_tree);


            pushFollow(FOLLOW_title_in_feature76);
            title4=title();

            state._fsp--;

            adaptor.addChild(root_0, title4.getTree());

            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:55:17: ( NL )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NL) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:55:17: NL
            	    {
            	    NL5=(Token)match(input,NL,FOLLOW_NL_in_feature78); 
            	    NL5_tree = 
            	    (Object)adaptor.create(NL5)
            	    ;
            	    adaptor.addChild(root_0, NL5_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:56:11: ( narrative )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==FEAT_KEY||(LA4_0 >= NUMBER && LA4_0 <= PHOLDER)||LA4_0==STRING||LA4_0==WORD) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:56:11: narrative
                    {
                    pushFollow(FOLLOW_narrative_in_feature91);
                    narrative6=narrative();

                    state._fsp--;

                    adaptor.addChild(root_0, narrative6.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:57:11: ( background )?
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:57:11: background
                    {
                    pushFollow(FOLLOW_background_in_feature104);
                    background7=background();

                    state._fsp--;

                    adaptor.addChild(root_0, background7.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:58:11: ( scenario | scenario_outline )+
            int cnt6=0;
            loop6:
            do {
                int alt6=3;
                alt6 = dfa6.predict(input);
                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:58:12: scenario
            	    {
            	    pushFollow(FOLLOW_scenario_in_feature118);
            	    scenario8=scenario();

            	    state._fsp--;

            	    adaptor.addChild(root_0, scenario8.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:58:21: scenario_outline
            	    {
            	    pushFollow(FOLLOW_scenario_outline_in_feature120);
            	    scenario_outline9=scenario_outline();

            	    state._fsp--;

            	    adaptor.addChild(root_0, scenario_outline9.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "feature"


    public static class background_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "background"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:61:1: background : ( NL )* BACKGROUND ( title )? ( NL )+ ( narrative )? ( step )+ ;
    public final GherkinParser.background_return background() throws RecognitionException {
        GherkinParser.background_return retval = new GherkinParser.background_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL10=null;
        Token BACKGROUND11=null;
        Token NL13=null;
        GherkinParser.title_return title12 =null;

        GherkinParser.narrative_return narrative14 =null;

        GherkinParser.step_return step15 =null;


        Object NL10_tree=null;
        Object BACKGROUND11_tree=null;
        Object NL13_tree=null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:61:11: ( ( NL )* BACKGROUND ( title )? ( NL )+ ( narrative )? ( step )+ )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:61:13: ( NL )* BACKGROUND ( title )? ( NL )+ ( narrative )? ( step )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:61:13: ( NL )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==NL) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:61:13: NL
            	    {
            	    NL10=(Token)match(input,NL,FOLLOW_NL_in_background147); 
            	    NL10_tree = 
            	    (Object)adaptor.create(NL10)
            	    ;
            	    adaptor.addChild(root_0, NL10_tree);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            BACKGROUND11=(Token)match(input,BACKGROUND,FOLLOW_BACKGROUND_in_background153); 
            BACKGROUND11_tree = 
            (Object)adaptor.create(BACKGROUND11)
            ;
            adaptor.addChild(root_0, BACKGROUND11_tree);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:63:4: ( title )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0 >= NUMBER && LA8_0 <= PHOLDER)||LA8_0==STRING||LA8_0==WORD) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:63:4: title
                    {
                    pushFollow(FOLLOW_title_in_background158);
                    title12=title();

                    state._fsp--;

                    adaptor.addChild(root_0, title12.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:63:11: ( NL )+
            int cnt9=0;
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==NL) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:63:11: NL
            	    {
            	    NL13=(Token)match(input,NL,FOLLOW_NL_in_background161); 
            	    NL13_tree = 
            	    (Object)adaptor.create(NL13)
            	    ;
            	    adaptor.addChild(root_0, NL13_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt9 >= 1 ) break loop9;
                        EarlyExitException eee =
                            new EarlyExitException(9, input);
                        throw eee;
                }
                cnt9++;
            } while (true);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:64:4: ( narrative )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==FEAT_KEY||(LA10_0 >= NUMBER && LA10_0 <= PHOLDER)||LA10_0==STRING||LA10_0==WORD) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:64:4: narrative
                    {
                    pushFollow(FOLLOW_narrative_in_background167);
                    narrative14=narrative();

                    state._fsp--;

                    adaptor.addChild(root_0, narrative14.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:65:4: ( step )+
            int cnt11=0;
            loop11:
            do {
                int alt11=2;
                alt11 = dfa11.predict(input);
                switch (alt11) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:65:4: step
            	    {
            	    pushFollow(FOLLOW_step_in_background173);
            	    step15=step();

            	    state._fsp--;

            	    adaptor.addChild(root_0, step15.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt11 >= 1 ) break loop11;
                        EarlyExitException eee =
                            new EarlyExitException(11, input);
                        throw eee;
                }
                cnt11++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "background"


    public static class scenario_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "scenario"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:68:1: scenario : ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+ ;
    public final GherkinParser.scenario_return scenario() throws RecognitionException {
        GherkinParser.scenario_return retval = new GherkinParser.scenario_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL16=null;
        Token SCENARIO18=null;
        Token NL20=null;
        GherkinParser.tag_return tag17 =null;

        GherkinParser.title_return title19 =null;

        GherkinParser.narrative_return narrative21 =null;

        GherkinParser.step_return step22 =null;


        Object NL16_tree=null;
        Object SCENARIO18_tree=null;
        Object NL20_tree=null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:68:9: ( ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+ )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:68:11: ( NL )* ( tag )* SCENARIO ( title )? ( NL )+ ( narrative )? ( step )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:68:11: ( NL )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==NL) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:68:11: NL
            	    {
            	    NL16=(Token)match(input,NL,FOLLOW_NL_in_scenario184); 
            	    NL16_tree = 
            	    (Object)adaptor.create(NL16)
            	    ;
            	    adaptor.addChild(root_0, NL16_tree);


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:69:11: ( tag )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==TAGNAME) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:69:11: tag
            	    {
            	    pushFollow(FOLLOW_tag_in_scenario197);
            	    tag17=tag();

            	    state._fsp--;

            	    adaptor.addChild(root_0, tag17.getTree());

            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            SCENARIO18=(Token)match(input,SCENARIO,FOLLOW_SCENARIO_in_scenario203); 
            SCENARIO18_tree = 
            (Object)adaptor.create(SCENARIO18)
            ;
            adaptor.addChild(root_0, SCENARIO18_tree);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:71:4: ( title )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( ((LA14_0 >= NUMBER && LA14_0 <= PHOLDER)||LA14_0==STRING||LA14_0==WORD) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:71:4: title
                    {
                    pushFollow(FOLLOW_title_in_scenario208);
                    title19=title();

                    state._fsp--;

                    adaptor.addChild(root_0, title19.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:71:11: ( NL )+
            int cnt15=0;
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==NL) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:71:11: NL
            	    {
            	    NL20=(Token)match(input,NL,FOLLOW_NL_in_scenario211); 
            	    NL20_tree = 
            	    (Object)adaptor.create(NL20)
            	    ;
            	    adaptor.addChild(root_0, NL20_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt15 >= 1 ) break loop15;
                        EarlyExitException eee =
                            new EarlyExitException(15, input);
                        throw eee;
                }
                cnt15++;
            } while (true);


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:72:4: ( narrative )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==FEAT_KEY||(LA16_0 >= NUMBER && LA16_0 <= PHOLDER)||LA16_0==STRING||LA16_0==WORD) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:72:4: narrative
                    {
                    pushFollow(FOLLOW_narrative_in_scenario217);
                    narrative21=narrative();

                    state._fsp--;

                    adaptor.addChild(root_0, narrative21.getTree());

                    }
                    break;

            }


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:73:4: ( step )+
            int cnt17=0;
            loop17:
            do {
                int alt17=2;
                alt17 = dfa17.predict(input);
                switch (alt17) {
            	case 1 :
            	    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:73:4: step
            	    {
            	    pushFollow(FOLLOW_step_in_scenario223);
            	    step22=step();

            	    state._fsp--;

            	    adaptor.addChild(root_0, step22.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt17 >= 1 ) break loop17;
                        EarlyExitException eee =
                            new EarlyExitException(17, input);
                        throw eee;
                }
                cnt17++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "scenario"


    public static class scenario_outline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "scenario_outline"
    // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:76:1: scenario_outline : ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )* ;
    public final GherkinParser.scenario_outline_return scenario_outline() throws RecognitionException {
        GherkinParser.scenario_outline_return retval = new GherkinParser.scenario_outline_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NL23=null;
        Token SCEN_OUT25=null;
        Token NL27=null;
        GherkinParser.tag_return tag24 =null;

        GherkinParser.title_return title26 =null;

        GherkinParser.narrative_return narrative28 =null;

        GherkinParser.step_return step29 =null;

        GherkinParser.examples_return examples30 =null;


        Object NL23_tree=null;
        Object SCEN_OUT25_tree=null;
        Object NL27_tree=null;

        try {
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:77:2: ( ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )* )
            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:77:4: ( NL )* ( tag )* SCEN_OUT ( title )? ( NL )+ ( narrative )? ( step )* ( examples )*
            {
            root_0 = (Object)adaptor.nil();


            // C:\\Users\\sessonad\\Documents\\NetBeansProjects\\Cetriolo\\src\\me\\dsnet\\cetriolo\\antlr\\Gherkin.g:77:4: ( NL )*
            loop18:
            do {
                int alt18=2;
                int LA18_0 = input.LA(1);

                if ( (LA18_0==NL) ) {
                    alt18=1;
                }

